[refactor] kotlin -> java